new page design

--- a/index.html
+++ b/index.html
@@ -19,56 +19,54 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/Logo1.png" title="DataBridge" style="height: 140px;">
+                    <img src="images/Logo2.png" title="DataBridge" style="height: 140px;">
                 </a>
             </div>
         </div>
     </nav>
 
-    <header class = "header_flex">
+    <div class="main">
+        <header class = "header_flex">
 
-        <img src="images/Bridge/bridge-white.jpg" class="header-image">
+            <img src="images/Bridge/bridge-extract.png" class="header-image">
 
-    </header>
+        </header>
 
-    <div class="container" class="main-cont" style="margin-top: -15px;;">
-        <h1 class="page-header">
-         <b> The DataBridge. </b>
-         <br/> <font size="5"> <i> The web, but faster. </i></font></h1>
-         
-
-         <div class="slide">
-             Yup
-         </div>
-
-<div class="slide">
-             Yup
-         </div>
-
-         <div class="slide">
-             Yup
-         </div>
-
-<!-- 
-         <section class="left-text">
-             <font size="5">
-                 <p>Tired of waiting for loading pages ?<p>
-                    <p class="stairs">We have the solution.</p>
-                    <p class="stairs2"><strong>Peers.</strong></p> 
-                </font>
-            </section>
-
-            <section class="pear">
-             <img src="images/pear.jpg" title="ThePeer" style="height: 140px;">
-         </section> -->
+            <h1 class="page-header">
+             <b> The DataBridge. </b>
+             <br/> <font size="5"> <i> The web, brought close to you. </i></font></h1>
 
 
 
-     </div>
 
-     <footer class="navbar navbar-inverse">
+             <div class="sub-content">               
 
-            <h3>Special thanks to <i><a href="http://www.bridgehacs.org/" title="bridgehaCS" target="_blank">bridgehaCS</a> 
+                 <div class="slide">
+                     <i> Eco-friendly. </i>
+                     <div class="info-txt">No need for energy-hungry server-farms</div>
+                 </div>
+
+                 <div class="slide">
+                   <i>  Cheap. </i>
+                   <div class="info-txt">Net reduction in server costs through distributed hosting</div>
+                 </div>
+
+                 <div class="slide">
+                     <i> And fast. </i>
+                     <div class="info-txt">Multiple data-sources for faster computing</div>
+                 </div>
+
+             </div>
+
+
+
+ </div>
+
+ <footer class="navbar navbar-inverse">
+
+    <a href="mailto:tensu.wave@gmail.com">
+    <img class ="footer-image" src="images/mail.png" title="We do read our mails.">
+    </a>
 
     </footer>
 
