--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         document.write('<'+'link rel="stylesheet" href="css/mozillaStyles.css" />')
       }
     </script>
+
+    <!--  Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">
+
+    <!--  Paper.js script-->
     <script type="text/javascript" src="libraries/paper-full.js"></script>
     <script type="text/paperscript" canvas="canvas">
 
