Moved contact envelopppe to header

--- a/index.html
+++ b/index.html
@@ -130,8 +130,12 @@ function onResize(event) {
 
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/Logo2.png" title="DataBridge" style="height: 140px;">
+                    <img src="images/Logo2.png" title="DataBridge" >
                 </a>
+
+                <a class="footer-image-wrap" href="mailto:tensu.wave@gmail.com">
+                  <img class="footer-image" src="images/mail.png" title="We do read our mails.">
+                  </a>
 
             </div>
 
@@ -159,21 +163,21 @@ function onResize(event) {
 
                    <div class="slide">
                      <div class="info-txt">
-                       <i class="slide-title"> Eco-friendly. </i>
+                       <b class="slide-title"> Eco-friendly. </b>
                        <div>No need for energy-hungry servers.</div>
                        </div>
                    </div>
 
                    <div class="slide">
                      <div class="info-txt">
-                     <i class="slide-title">  Cheap. </i>
+                     <b class="slide-title">  Cheap. </b>
                      <div>Net reduction in server costs through distributed hosting. </div>
                      </div>
                    </div>
 
                    <div class="slide">
                      <div class="info-txt">
-                       <i class="slide-title"> And fast. </i>
+                       <b class="slide-title"> And fast. </b>
                        <div>Multiple data-sources for faster computing.</div>
                        </div>
                    </div>
@@ -202,9 +206,7 @@ function onResize(event) {
 
  </div>
 <div class="footer">
-  <a class="footer-image-wrap" href="mailto:tensu.wave@gmail.com">
-    <img class="footer-image" src="images/mail.png" title="We do read our mails.">
-    </a>
+
 </div>
 
 
