--- a/index.html
+++ b/index.html
@@ -86,42 +86,42 @@
             <div class="grid-flex-container">
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-http.svg" />
+                        <!-- <img src="./images/.svg" /> -->
                     </div>
                     <h5 class="content-center"><strong>Central servers are inefficient</strong></h5>
-                    <p>With a central server or a CDN, users can only be served a file from a single server at a time, instead of getting pieces from multiple computers simultaneously.</p>
-                    <p>The DataBridge Network makes it possible to distribute high volumes of data with high efficiency. Scalable Flexible</p>
+                    <p>With a central server or a CDN, users can only be served a file from a single server at a time, instead of getting pieces from multiple computers simultaneously. As server are not allocated instantly, server power always lags behind network usage. This results in a waste of ressources, or in contrary, slow performance. </p>
+                    <p>The DataBridge Network makes it possible to distribute high volumes of data with high efficiency and speed. As more users result in better performance, the DataBridge Network scales dynamically and is the most flexible network to this date.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-history.svg" />
+                        <!-- <img src="./images/.svg" /> -->
                     </div>
                     <h5 class="content-center"><strong>Bandwidth is expensive</strong></h5>
-                    <p>With ever more traffic, high-resolution images and 4k video, bandwidth costs are increasingly becoming a barrier for delivering content online. By integrating users as active components of the network, a distributed solution only rarely   <a href="http://math.oregonstate.edu/~kovchegy/web/papers/p2p-vdn.pdf">With video delivery, a P2P approach could save 60% in distribution costs.</a> </p>
-                    <p>IPFS provides historic versioning (like git) and makes it simple to set up resilient networks for mirroring of data.</p>
+                    <p>With ever more traffic, high-resolution images and 4k video, bandwidth costs are increasingly becoming a barrier for delivering content online. By integrating users as active components of the network, a distributed solution does not rely on bandwidth for most of its content delivery. <a href="http://math.oregonstate.edu/~kovchegy/web/papers/p2p-vdn.pdf">With video content, such a P2P approach could save 60% in distribution costs.</a> </p>
+                    <p>The DataBridge Network effectively reduces bandwidth costs through distributed content delivery.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-centralized.svg" />
+                        <!-- <img src="./images/.svg" /> -->
                     </div>
-                    <h5 class="content-center"><strong>The web's centralization limits opportunity</strong></h5>
-                    <p>The Internet has been one of the great equalizers in human history and a real accelerator of innovation. But the increasing consolidation of control is a threat to that.</p>
-                    <p>IPFS remains true to the original vision of the open and flat web, but delivers the technology which makes that vision a reality.</p>
+                    <h5 class="content-center"><strong>Servers are energy-hungry</strong></h5>
+                    <p><a href="http://etheses.whiterose.ac.uk/7866/1/EEinCDNs.pdf"> Energy consumption is expected to become an internet bottleneck in the next years. </a> Central servers consume up to 70% of the total transmission energy and are responsible for the associated carbon dioxide (CO2) and heat emissions. <a href="http://etheses.whiterose.ac.uk/7866/1/EEinCDNs.pdf">In 2020, communications networks will emit as much CO2 as civil aviation.</a> Reducing the ecological impact of the internet will be one of the major challenges of the next decade.</p>
+                    <p>The DataBridge Network offers an ecologically clean alternative to server access.</p>
                 </div>
                 <div class="grid-flex-cell-1of2">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-network.svg" />
+                        <!-- <img src="./images/.svg" /> -->
                     </div>
                     <h5 class="content-center"><strong>Simple integration into your existing architecture</strong></h5>
-                    <p>Developing world. Offline. Natural disasters. Intermittent connections. All trivial compared to interplanetary networking. The networks we're using are so 20th Century. We can do better.</p>
-                    <p>IPFS powers the creation of diversely resilient networks which enable persistent availability with or without Internet backbone connectivity.</p>
+                    <p>Modern day platforms are growing ever more complicated, combining hosting, multiple content delivery networks and data anlytic services.</p>
+                    <p>The DataBridge Network can be seamlessy added on top of your existing architecture in a few clicks.</p>
                 </div>
             </div>
             <div class="content-center our-aim">
                 <div class="illustration">
-                    <img src="./images/ipfs-illustration-uses-network.svg" />
+                    <!-- <img src="./images/.svg" /> -->
                 </div>
-                <h3>IPFS aims to replace HTTP and<br/>build a better web for all of us.</h3>
+                <h3>DataBridge aims to become a new standard for content delivery and<br/>build a better web for all of us: Fast, Safe and Clean.</h3>
             </div>
         </section>
         <section id="how">
