Updated How resolves #46

--- a/index.html
+++ b/index.html
@@ -121,57 +121,57 @@
                 <div class="illustration">
                     <!-- <img src="./images/.svg" /> -->
                 </div>
-                <h3>DataBridge aims to become a new standard for content delivery and<br/>build a better web for all of us: Fast, Safe and Clean.</h3>
+                <h3>DataBridge aims to become a new standard for content delivery <br/> and build a better web for all of us: <br/> Fast, Safe and Clean.</h3>
             </div>
         </section>
         <section id="how">
             <div class="content-center mb2">
-                <h2>Here's how IPFS works</h2>
-                <h5>Let's take a look at what happens when you add files to IPFS:</h5>
+                <h2>Here's how the DataBridge Network works</h2>
+                <h5>Let's take a look at what happens when you add your website to the network:</h5>
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <img src="./images/ipfs-illustrations-how-1.svg" />
+                    <!-- <img src="./images/illustrations-how-1.svg" /> -->
                 </div>
                 <div class="how-description">
-                    <h5>Each file and all of the <strong>blocks within it</strong> are given a <strong>unique fingerprint</strong> called a <strong>cryptographic hash</strong>.</h5>
-                </div>
-            </div>
-            <div class="how-item">
-                <div class="illustration">
-                    <img src="./images/ipfs-illustrations-how-2.svg" />
-                </div>
-                <div class="how-description">
-                    <h5>IPFS <strong>removes duplications</strong> across the network and tracks <strong>version history</strong> for every file.</h5>
+                    <h5>Each file and all of the <strong>blocks within it</strong> are given a <strong>unique signature</strong> called a <strong>cryptographic hash</strong>.</h5>
                 </div>
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <img src="./images/ipfs-illustrations-how-3.svg" />
+                    <!-- <img src="./images/illustrations-how-2.svg" /> -->
                 </div>
                 <div class="how-description">
-                    <h5>Each <strong>network node</strong> stores only content it is interested in, and some indexing information that helps figure out who is storing what.</h5>
+                    <h5>The very <strong>first user</strong> of your website accesses the data he needs from you server or CDN. Nothing special so far.</h5>
                 </div>
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <img src="./images/ipfs-illustrations-how-4.svg" />
+                    <!-- <img src="./images/illustrations-how-3.svg" /> -->
                 </div>
                 <div class="how-description">
-                    <h5>When <strong>looking up files</strong>, you're asking the network to find nodes storing the content behind a unique hash.</h5>
+                    <h5>Once a user has obtained a piece of <strong>data</strong>, he becomes an active <strong>network node</strong> and serves the data to all subsequent users.</h5>
                 </div>
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <img src="./images/ipfs-illustrations-how-5.svg" />
+                    <!-- <img src="./images/illustrations-how-4.svg" /> -->
                 </div>
                 <div class="how-description">
-                    <h5>Every file can be found by <strong>human-readable names</strong> using a decentralized naming system called <strong>IPNS</strong>.</h5>
+                    <h5>An orchestrator regulates all transfers and guarantees the <strong>identity</strong> of all transferred files by verifiyng their <strong>unique hash</strong>.</h5>
+                </div>
+            </div>
+            <div class="how-item">
+                <div class="illustration">
+                    <!-- <img src="./images/illustrations-how-5.svg" /> -->
+                </div>
+                <div class="how-description">
+                    <h5><strong>Website performance</strong> and <strong>user experience</strong> are the main priorities of the network at all times.</h5>
                 </div>
             </div>
             <div class="content-center">
-                <h5>For a deeper look at IPFS</h5>
-                <a class="button button-primary" href="https://github.com/ipfs/papers/raw/master/ipfs-cap2pfs/ipfs-p2p-file-system.pdf">Read the white paper</a>
+                <h5>For a deeper look at the DataBridge Network</h5>
+                <a class="button button-primary" href="">Read the white paper</a>
             </div>
         </section>
         <section id="uses" class="content-center">
