Added join section

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
       <ul class="list-unstyled list-inline cf">
 
           <li><a href="./#why">Why</a></li>
-          <li><a href="./#how">How</a></li>
+          <!-- <li><a href="./#how">How</a></li> -->
           <li><a href="./#uses">Uses</a></li>
 
-        <!-- <li><a href="./docs/install" >Install</a></li>
-        <li><a href="./media" >Media</a></li>
+        <li><a href="/docs/join/join.html" >Join</a></li>
+        <!-- <li><a href="./media" >Media</a></li>
         <li><a href="./docs" >Docs</a></li>
         <li><a href="./blog" >Blog</a></li> -->
       </ul>
@@ -121,17 +121,18 @@
                 <div class="illustration">
                     <!-- <img src="./images/.svg" /> -->
                 </div>
-                <h3>DataBridge aims to become a new standard for content delivery <br/> and build a better web for all of us: <br/> Fast, Safe and Clean.</h3>
+                <h3>DataBridge aims to become a new standard for content delivery and build a better web for all of us: <br/> Fast, Safe and Clean.</h3>
             </div>
         </section>
-        <section id="how">
+
+        <!-- <section id="how">
             <div class="content-center mb2">
                 <h2>Here's how the DataBridge Network works</h2>
                 <h5>Let's take a look at what happens when you add your website to the network:</h5>
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <!-- <img src="./images/illustrations-how-1.svg" /> -->
+                    <img src="./images/illustrations-how-1.svg" />
                 </div>
                 <div class="how-description">
                     <h5>Each file and all of the <strong>blocks within it</strong> are given a <strong>unique signature</strong> called a <strong>cryptographic hash</strong>.</h5>
@@ -139,7 +140,7 @@
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <!-- <img src="./images/illustrations-how-2.svg" /> -->
+                    <img src="./images/illustrations-how-2.svg" />
                 </div>
                 <div class="how-description">
                     <h5>The very <strong>first user</strong> of your website accesses the data he needs from you server or CDN. Nothing special so far.</h5>
@@ -147,7 +148,7 @@
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <!-- <img src="./images/illustrations-how-3.svg" /> -->
+                    <img src="./images/illustrations-how-3.svg" />
                 </div>
                 <div class="how-description">
                     <h5>Once a user has obtained a piece of <strong>data</strong>, he becomes an active <strong>network node</strong> and serves the data to all subsequent users.</h5>
@@ -155,7 +156,7 @@
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <!-- <img src="./images/illustrations-how-4.svg" /> -->
+                    <img src="./images/illustrations-how-4.svg" />
                 </div>
                 <div class="how-description">
                     <h5>An orchestrator regulates all transfers and guarantees the <strong>identity</strong> of all transferred files by verifiyng their <strong>unique hash</strong>.</h5>
@@ -163,7 +164,7 @@
             </div>
             <div class="how-item">
                 <div class="illustration">
-                    <!-- <img src="./images/illustrations-how-5.svg" /> -->
+                    <img src="./images/illustrations-how-5.svg" />
                 </div>
                 <div class="how-description">
                     <h5><strong>Website performance</strong> and <strong>user experience</strong> are the main priorities of the network at all times.</h5>
@@ -173,54 +174,54 @@
                 <h5>For a deeper look at the DataBridge Network</h5>
                 <a class="button button-primary" href="">Read the white paper</a>
             </div>
-        </section>
+        </section> -->
+
         <section id="uses" class="content-center">
-            <h2>IPFS is useful here and now</h2>
+            <h2>The DataBridge Network is useful here and now</h2>
             <div class="grid-flex-container">
                 <div class="grid-flex-cell">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-archivists.svg" />
+                        <!-- <img src="./images/illustration-ecommerce.svg" /> -->
                     </div>
-                    <h5>Archivists</h5>
-                    <p>It's not enough to organize the world's information—we need to store it in a way the world can remember it. IPFS provides deduplication, high performance, and clustered persistence.</p>
+                    <h5>E-Commerce</h5>
+                    <p>In E-commerce every millisecond matters. Stacked on top of your CDN, the DataBridge Network provides high performance and a maximum reach.</p>
                 </div>
                 <div class="grid-flex-cell service-providers">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-service.svg" />
+                        <!-- <img src="./images/illustration-service.svg" /> -->
                     </div>
                     <h5>Service providers</h5>
-                    <p>If your company delivers large amounts of data to users, a peer-to-peer approach could save you millions in bandwidth. IPFS can provide secure P2P content delivery.</p>
+                    <p>If your company delivers huge datasets to its users, a peer-to-peer approach could save you millions in bandwidth. DataBridge can provide secure and efficient P2P content delivery.</p>
                 </div>
                 <div class="grid-flex-cell">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-data.svg" />
+                        <!-- <img src="./images/illustration-content.svg" /> -->
                     </div>
-                    <h5>Researchers</h5>
-                    <p>If you're working with, distributing, and analyzing huge datasets, IPFS offers fast performance and decentralized archiving.</p>
+                    <h5>Content Providers</h5>
+                    <p>If you are distributing and marketing large amounts of content, the DataBridge Network offers fast performance whilst effectively reducing your bandwidth costs.</p>
                 </div>
             </div>
             <div class="grid-flex-container">
                 <div class="grid-flex-cell">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-developing.svg" />
+                        <!-- <img src="./images/illustration-developing.svg" /> -->
                     </div>
                     <h5>Developing world</h5>
-                    <p>High latency networks are a real barrier of entry to developing world. IPFS provides resilient access to data, independent of low latency or connectivity to the backbone.</p>
+                    <p>High latency networks and absence of servers are a real barrier of entry to developing world business. The DataBridge Network provides resilient access to data, independent of low latency or connectivity to the central servers.</p>
                 </div>
                 <div class="grid-flex-cell">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-blockchains.svg" />
+                        <!-- <img src="./images/illustration-premium.svg" /> -->
                     </div>
-                    <h5>Blockchains</h5>
-                    <p>IPFS and the Blockchain are a perfect match! You can address large amounts of data with IPFS, and place the immutable, permanent IPFS links into a blockchain transaction. This timestamps and secures your content, without having to put
-                        the data on the chain itself.</p>
+                    <h5>Premium Websites</h5>
+                    <p>Fluidity and performance are a premium website's most valuable assets. In combination with central servers, the DataBridge delivers the best experience all around the world.</p>
                 </div>
                 <div class="grid-flex-cell">
                     <div class="illustration">
-                        <img src="./images/ipfs-illustration-creators.svg" />
+                        <!-- <img src="./images/illustration-media.svg" /> -->
                     </div>
-                    <h5>Content creators</h5>
-                    <p>IPFS brings the freedom and independent spirit of the web at full force—and at low cost. IPFS can help deliver content in a way which can save you considerable money.</p>
+                    <h5>News & Media</h5>
+                    <p>DataBridge brings the freedom and independent spirit of the web at full speed and at low cost. The DataBridge Network can help deliver content in a way which can save you considerable money.</p>
 
                 </div>
             </div>
